# Renaissance-api

./: ADMIN_MODERATION.md  COMPLETION_VERIFICATION.md  DELIVERABLES_SUMMARY.md  LOCAL_DEVELOPMENT_SETUP.md  package.json  review.md
backend/: LEADERBOARD_AGGREGATION_IMPLEMENTATION.md  REAL_TIME_NOTIFICATIONS_IMPLEMENTATION.md  package-lock.json  package.json  test-build.js
backend/src/: app.module.ts  main.ts
backend/src/admin/: admin-analytics.service.ts  admin-override.service.spec.ts  admin-override.service.ts  admin.controller.ts  admin.module.ts  admin.service.ts  emergency-pause.service.ts  emergency.controller.ts
backend/src/analytics/: analytics.controller.ts  analytics.module.ts
backend/src/audit/: audit-report.dto.ts  audit-report.entity.ts  audit.controller.ts  audit.module.ts  audit.scheduler.ts  audit.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/bets/: bets.controller.ts  bets.module.ts  (+1 more)
backend/test/: admin.e2e-spec.ts  auth.e2e-spec.ts
contract/: BACKEND_VERIFICATION_DOCUMENTATION.md  Cargo.toml  EVENTS_DOCUMENTATION.md  Makefile
contract/contracts/: profitability_tracker.rs  protrac.rs  staking.rs
contract/contracts/spin_rewards/: Cargo.toml
contract/contracts/spin_rewards/src/: errors.rs  events.rs  lib.rs  nft.rs  reward.rs  reward.types.rs  storage.rs
contract/deployment/: Makefile  README.md  deploy-contracts.ps1  deploy-contracts.sh  deployment-config.json
docs/: backend_architecture.md  deployment.md  document_schema.md  migrations.md  security.md  smart_contract_architecture.md
(+285 files in other folders)
